--- a/regex-automata/Cargo.toml
+++ b/regex-automata/Cargo.toml
@@ -18,8 +18,8 @@ bench = false
 # This crate has many many many features. See the crate docs for a description
 # of each and when you might want to use them.
 [features]
-default = ["std", "syntax", "perf", "unicode", "meta", "nfa", "dfa", "hybrid"]
-std = ["regex-syntax?/std", "memchr?/std", "aho-corasick?/std", "alloc"]
+default = ["std", "syntax", "perf", "unicode", "meta", "nfa", "dfa", "hybrid", "atomic-shared-cache"]
+std = ["regex-syntax?/std", "memchr?/std", "aho-corasick?/std", "minimal-lock-free-stack?/std", "alloc"]
 alloc = []
 logging = ["dep:log", "aho-corasick?/logging", "memchr?/logging"]
 
@@ -44,6 +44,8 @@ perf-inline = []
 perf-literal = ["perf-literal-substring", "perf-literal-multisubstring"]
 perf-literal-substring = ["aho-corasick?/perf-literal", "dep:memchr"]
 perf-literal-multisubstring = ["std", "dep:aho-corasick"]
+
+atomic-shared-cache = ["dep:minimal-lock-free-stack"]
 
 # Enables all Unicode features. This expands if new Unicode features are added.
 unicode = [
@@ -85,6 +87,7 @@ internal-instrument-pikevm = ["logging", "std"]
 aho-corasick = { version = "1.0.0", optional = true, default-features = false }
 log = { version = "0.4.14", optional = true }
 memchr = { version = "2.6.0", optional = true, default-features = false }
+minimal-lock-free-stack = { git = "https://github.com/cosmicexplorer/minimal-lock-free-stack", rev = "f04109cb608dda9b3828805db3863e0f8de03bde", optional = true }
 regex-syntax = { path = "../regex-syntax", version = "0.7.4", optional = true, default-features = false }
 
 [dev-dependencies]
